my_salesforce_source/force-app/main/default/objects/Risk_Assessment__c/Risk_Assessment__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment</label>
    <nameField>
        <label>Risk Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>