my_salesforce_source/force-app/main/default/objects/Risk_Assessment__c/fields/Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>Calculated_At__c</fullName>
    <label>Calculated At</label>
    <type>DateTime</type>
</CustomField>